tests/expectations/compiler/structs/cyclic_structs_one_fail.out
Error [ETYC0372058]: Cyclic dependency between composites: `test.aleo/Foo` --> `test.aleo/Foo`
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:6:9
     |
   6 | program test.aleo { }
     |         ^^^^^^^^^
